--- a/templates/admin/index.html.twig
+++ b/templates/admin/index.html.twig
@@ -40,7 +40,7 @@
 
 			<!-- Preloader -->
 			<div class="preloader flex-column justify-content-center align-items-center">
-				<img class="animation__shake" src="dist/img/AdminLTELogo.png" alt="AdminLTELogo" height="60" width="60">
+				<img class="animation__shake" src={{ asset  ("dist/img/AdminLTELogo.png") }} alt="AdminLTELogo" height="60" width="60">
 			</div>
 
 			<!-- Navbar -->
@@ -54,7 +54,7 @@
 						</a>
 					</li>
 					<li class="nav-item d-none d-sm-inline-block">
-						<a href="index3.html" class="nav-link">Home</a>
+						<a href="" class="nav-link">Home</a>
 					</li>
 				
 				</ul>
@@ -103,7 +103,7 @@
 				class="main-sidebar sidebar-dark-primary elevation-4">
 				<!-- Brand Logo -->
 				<a href="/productsTable" class="brand-link">
-					<img src="dist/img/AdminLTELogo.png" alt="AdminLTE Logo" class="brand-image img-circle elevation-3" style="opacity: .8">
+					<img src={{  asset("dist/img/AdminLTELogo.png")}} alt="AdminLTE Logo" class="brand-image img-circle elevation-3" style="opacity: .8">
 					<span class="brand-text font-weight-light">Admin space</span>
 				</a>
 
@@ -113,7 +113,7 @@
 					<!-- Sidebar user panel (optional) -->
 					<div class="user-panel mt-3 pb-3 mb-3 d-flex">
 						<div class="image">
-							<img src="dist/img/user2-160x160.jpg" class="img-circle elevation-2" alt="User Image">
+							<img src={{asset ("dist/img/user2-160x160.jpg")}}  class="img-circle elevation-2" alt="User Image">
 						</div>
 						<div class="info">
 							<a href="#" class="d-block">User name</a>
