--- a/templates/admin/productsNew.html.twig
+++ b/templates/admin/productsNew.html.twig
@@ -1,5 +1,5 @@
-{% extends "admin/index.html.twig" %}
-    
+{% extends "./admin/index.html.twig" %}
+
 {% block body %}
 
 <!DOCTYPE html>
@@ -21,7 +21,7 @@
   <link rel="stylesheet" href="{{ asset ('../../dist/css/adminlte.min.css')}}">
 </head>
 <body class="hold-transition sidebar-mini">
-  
+
     <!-- Main content -->
     <section class="content">
       <div class="container-fluid">
@@ -50,12 +50,7 @@
                  <input type="text" id="prix" class="form-control is-invalid" onchange="prixOnChange()" name="prix"><br />
                  <br>
                  <div class="input-group">
-                   <div class="custom-file">
-                   <input type="file" class="custom-file-input is-invalid" name="image">
 
-                 <label for="image" class="custom-file-label">Image</label>
-
-                 </div>
               </div>
                  <br>
                  <button type="submit" class="btn btn-primary" name="submit">Create</button>
@@ -119,7 +114,7 @@
     <!-- /.content -->
   </div>
   <!-- /.content-wrapper -->
-  
+
 
   <!-- Control Sidebar -->
   <aside class="control-sidebar control-sidebar-dark">
