added create stock / delete stock

--- a/templates/admin/stockTable.html.twig
+++ b/templates/admin/stockTable.html.twig
@@ -167,7 +167,7 @@
             x += '<td>' + value.qte + '</td>'
             x += '<td>' + value.gnom + '</td>'
             x += '<td><a class="btn btn-app" href="/stocks/edit/' + value.sid + '"><i class="fas fa-edit"></i> Edit </a></td>'
-            x += '<td><a class="btn btn-app" href="/stock/delete/' + value.sid + '"><i class="fas fa-trash"></i> Delete </a></td>'
+            x += '<td><a class="btn btn-app" href="/stocks/delete/' + value.sid + '"><i class="fas fa-trash"></i> Delete </a></td>'
             x += '</tr>'
           })
 
@@ -196,7 +196,7 @@
             x += '<td>' + value.qte + '</td>'
             x += '<td>' + value.gnom + '</td>'
             x += '<td><a class="btn btn-app" href="/stock/edit/' + value.sid + '"><i class="fas fa-edit"></i> Edit </a></td>'
-            x += '<td><a class="btn btn-app" href="/stock/delete/' + value.sid + '"><i class="fas fa-trash"></i> Delete </a></td>'
+            x += '<td><a class="btn btn-app" href="/stocks/delete/' + value.sid + '"><i class="fas fa-trash"></i> Delete </a></td>'
             x += '</tr>'
           })
 
